<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpt276.g14.mathappg14.ProfileActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/Profile_Avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/image"
                    android:maxHeight="250dp"
                    android:maxWidth="250dp"
                    android:src="@drawable/default_avatar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp" >

                    <TextView
                        android:id="@+id/Profile_Username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/Profile_FirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FirstName"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/Profile_TotalXP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Experience"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/Profile_DiffXP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Differentiation_XP"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/Profile_IntXP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Integration_XP"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>
