<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpt276.g14.mathappg14.LoginActivity" >

      <Button
          android:id="@+id/button_login_user_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="40dp"
          android:text="@string/repeters" />

      <Button
          android:id="@+id/button_login_user_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/button_login_user_1"
          android:layout_below="@+id/button_login_user_1"
          android:layout_marginTop="24dp"
          android:text="@string/kza21" />

      <Button
          android:id="@+id/button_login_user_3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/button_login_user_1"
          android:layout_below="@+id/button_login_user_2"
          android:layout_marginTop="24dp"
          android:layout_centerVertical="true"
          android:text="@string/lkylych" />

      <Button
          android:id="@+id/button_login_user_4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/button_login_user_1"
          android:layout_below="@+id/button_login_user_3"
          android:layout_marginTop="24dp"
          android:text="@string/jacebedo" />

</RelativeLayout>
