<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpt276.g14.mathappg14.PasswordActivity" >

    <TextView
        android:id="@+id/textView_login_enter_password_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_login_enter_password_welcome_message"
        android:layout_marginTop="18dp"
        android:text="@string/enter_your_password_below"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_login_enter_password_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_login_enter_password_message"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login_enter_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_login_enter_password_password"
        android:layout_marginTop="26dp"
        android:onClick="onClick_login_enter_password_login"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView_login_enter_password_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_user_1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>