<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpt276.g14.mathappg14.SignUpActivity" >

    <TextView
        android:id="@+id/textview_SignUp_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <EditText
        android:id="@+id/edittext_SignUp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview_SignUp_SignUp"
        android:layout_below="@+id/textview_SignUp_SignUp"
        android:layout_marginTop="21dp"
        android:ems="10" 
        android:hint="@string/username" />

<EditText
    android:id="@+id/edittext_SignUp_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/edittext_SignUp_username"
    android:layout_below="@+id/edittext_SignUp_username"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/password" />



<Button
    android:id="@+id/button_SignUp_SignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="@string/sign_up" />
    
</RelativeLayout>